exchangeable routing algorithms